apps/pihole/post-install/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pihole.local.asztalos.net`) && PathPrefix(`/api`)
      priority: 20  # Higher than your main route
      services:
        - name: pihole-web
          namespace: pihole
          port: 80
    - kind: Rule
      middlewares:
        - name: authentik
          namespace: traefik
        - name: default-headers
          namespace: traefik
      match: Host(`pihole.local.asztalos.net`)
      priority: 10
      services:
        - name: pihole-web
          namespace: pihole
          port: 80
  tls:
    secretName: local-asztalos-net-tls
